--- a/Practica5/styles.css
+++ b/Practica5/styles.css
@@ -8,6 +8,18 @@
     background-color: rgb(207, 7, 7);
 }
 
+input{
+    background-color: transparent;
+}
+
+body
+{
+    background-image: url("https://img.freepik.com/foto-gratis/nubes-cielo-azul_74190-7829.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}   
+
 .botonMusica
 {
     padding: 5px;
